# html_detector_lib

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
html_detector/: __init__.py  data.py  models.py  parser.py
src/: lib.rs
