[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "html_detector"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = ["pydantic>=2.12.5,<3.0", "bs4>=0.0.2,<1.0"]

[tool.maturin]
module-name = "html_detector._html_detector"
features = ["pyo3/abi3-py310"]
